2007-08-01  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/builder.py (StatusResourceBuilder.force):
	bring this up-to-date w.r.t. recent refactorings, and fix
	redirections to bounce the browser to the top page after hitting
	the 'force' button. This needs to be improved, but at least it now
	redirects to a valid page.
	(StatusResourceBuilder.ping): same
	(StatusResourceBuilder.getChild): same, although I think this code
	might be dead anyways

	* buildbot/status/web/waterfall.py (WaterfallStatusResource): add
	a branch= query argument, to filter the display down to builds and
	changes that involve the given branch. You can add multiple
	branch= arguments to see multiple branches (using a logical OR).
	Note that there is no way to include the default branch (i.e.
	None, i.e. trunk) yet, there is still work to be done to allow for
	simple+uniform names of branches (i.e. removing the VC-specific
	details of how branches are implemented, so calling the branch
	'beta4' even though the SVN checkout step requires
	'branches/beta4').
	* buildbot/status/builder.py (BuilderStatus.eventGenerator): same
	* buildbot/changes/changes.py (ChangeMaster.eventGenerator): same
	* buildbot/interfaces.py (IEventSource.eventGenerator): same
	* docs/buildbot.texinfo (Buildbot Web Resources): document it

	* all: bring import statements up-to-date: don't import
	__future__, assume cPickle and cStringIO are always available.
	Also remove #!/usr/bin/python lines from non-scripts, my editor
	has been a bit over-enthusiastic about stuffing them into new .py
	files.

	* buildbot/status/web/index.html: put a link to the waterfall page
	on the index, otherwise first-time users of WebStatus aren't going
	to see anything very interesting.

	* buildbot/interfaces.py (IEventSource): document this interface.
	Thanks to Dustin Mitchell for the patch. Closes #60.
	* buildbot/status/builder.py (BuilderStatus): same
	* buildbot/changes/changes.py (ChangeMaster): same
